[package]
name = "ebisu-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30.0", features = ["all-widgets", "serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18" # Error handling
thiserror-impl = "2.0.18" # Error handling
anyhow = "1.0.72" # Error handling
libsql = "0.9.29"
color-eyre = "0.6.3"
crossterm = "0.29.0"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = [
    "db-diesel-mysql",
] } # Basic features, we store as string anyway in sqlite often, but lets keep it standard
rust_decimal_macros = "1.33"
uuid = { version = "1.6", features = ["v4", "fast-rng", "macro-diagnostics"] }
strum = { version = "0.26", features = ["derive"] }


# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
